--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Admin Panel</title>
+    <title>@ViewData["Title"] - Админ панель</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
@@ -18,7 +18,7 @@
         </div>
     </main>
 
-    <footer class="border-top footer text-muted fixed-bottom">
+    <footer class="footer text-muted fixed-bottom bg-light">
         <div class="container text-center">
                 &copy; @DateTime.Now.Year - Reba.by | сгенерировано @DateTime.Now.ToString("g")
             <br>
