--- a/by.Reba/by.Reba.Application/Views/Shared/_LayoutHeader.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_LayoutHeader.cshtml
@@ -1,4 +1,4 @@
-﻿<header>
+﻿<header class="sticky-top">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
             <ul class="navbar-nav flex-grow-1">
@@ -6,10 +6,6 @@
                     <img src="~/favicon.png" alt="Logo" width="70" height="70">
                     <big>Reba.by</big>
                 </a>
-    @*            <a class="navbar-brand" asp-controller="Account" asp-action="Login">
-                    <img src="~/login.png" alt="login" height="40px" width="40px" />
-                    Войти
-                </a>*@
             </ul>
             <ul id="login-nav" class="navbar-nav"></ul>
         </div>
