--- a/by.Reba/by.Reba.Application/Views/Article/_CommentPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_CommentPartial.cshtml
@@ -11,9 +11,13 @@
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#@($"c{Model.Id}")" aria-expanded="true">Ответить</button>
             </div>
             <div class="p-2 ms-auto">
-                <img src="~/like.svg" alt="like" height="15px" width="15px">
+                <a asp-controller="Comment" asp-action="Rate" asp-route-commentId="@Model.Id" asp-route-islike="true" asp-route-articleid="@Model.ArticleId">
+                    <img src="~/like.svg" alt="like" height="15px" width="15px">
+                </a>
                 <span class="ps-1">@Model.Assessment</span>
-                <img src="~/dislike.svg" alt="like" height="15px" width="15px">
+                <a asp-controller="Comment" asp-action="Rate" asp-route-commentId="@Model.Id" asp-route-islike="false" asp-route-articleid="@Model.ArticleId">
+                    <img src="~/dislike.svg" alt="like" height="15px" width="15px">
+                </a>
             </div>
         </div>
     </div>
