--- a/by.Reba/by.Reba.Application/Views/Article/_FilterPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_FilterPartial.cshtml
@@ -10,49 +10,52 @@
 </nav>
 <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Фильтры</h5>
+        <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Фильтры</h2>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <h5 class="text-center">Категории:</h5>
-        @foreach (var category in Model.Categories)
-        {
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="@nameof(Model.Categories)" checked="@Model.CurrentFilter.Categories.Contains(category.Id)" value="@category.Id">
-                <label class="form-check-label">
-                    @category.Title
-                </label>
-            </div>
-        }
-        <hr />
-        <h5 class="text-center">Источники:</h5>
+        <h4 class="text-center">Категории:</h4>
+        <ul class="list-group">
+            @foreach (var category in Model.Categories)
+            {
+                <li class="list-group-item">
+                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Categories)" checked="@Model.CurrentFilter.Categories.Contains(category.Id)" value="@category.Id">
+                    <label class="form-check-label ms-3">@category.Title</label>
+                </li>
+            }
+        </ul>
+        <h4 class="text-center mt-2">Источники:</h4>
+        <ul class="list-group">
         @foreach (var source in Model.Sources)
         {
-            <div class="form-check">
+            <li class="list-group-item">
                 <input class="form-check-input" type="checkbox" name="@nameof(Model.Sources)" checked="@Model.CurrentFilter.Sources.Contains(source.Id)" value="@source.Id">
-                <label class="form-check-label">
-                    @source.Name
-                </label>
-            </div>
+                <label class="form-check-label ms-3">@source.Name</label>
+            </li>
         }
-        <hr />
-        <h5 class="text-center">Позитивность:</h5>
+        </ul>
+        <h4 class="text-center mt-2">Позитивность:</h4>
+        <ul class="list-group">
         @foreach (var rating in Model.PositivityRatings)    
         {
-            <div class="form-check">
+            <li class="list-group-item">
                 <input class="form-check-input" type="radio" name="MinPositivityRating" checked="@Model.CurrentFilter.MinPositivityRating.Equals(rating.Id)" value="@rating.Id">
-                <label class="form-check-label">
+                <label class="form-check-label ms-3">
                     @rating.Title
                 </label>
-            </div>
+            </li>
         }
-        <hr />
-        <h6>с</h6>
-        <input type="datetime-local" name="@nameof(Model.CurrentFilter.From)" value="@Model.CurrentFilter.From.ToString("yyyy-MM-ddTHH:mm")" />
-        <hr />
-        <h6>по</h6>
-        <input type="datetime-local" name="@nameof(Model.CurrentFilter.To)" value="@Model.CurrentFilter.To.ToString("yyyy-MM-ddTHH:mm")" />
-        <hr />
+        </ul>
+
+        <div class="mt-3">
+            <label class="form-lable col-1 text-center"><h4>C</h4></label>
+            <input class="col-10 ms-3" type="datetime-local" name="@nameof(Model.CurrentFilter.From)" value="@Model.CurrentFilter.From.ToString("yyyy-MM-ddTHH:mm")" />
+        </div>
+        <div class="mt-3">
+            <label class="form-label col-1 text-center"><h4>По</h4></label>
+            <input class="col-10 ms-3" type="datetime-local" name="@nameof(Model.CurrentFilter.To)" value="@Model.CurrentFilter.To.ToString("yyyy-MM-ddTHH:mm")" />
+        </div>
+        
         <div class="text-center">
             <button class="btn btn-primary" type="submit">Найти</button>
         </div>
