Added user history logic, Edit articles logic

--- a/by.Reba/by.Reba.Application/Views/Article/Create.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@using by.Reba.Application.Models.Article
 
-@model CreateArticleVM
+@model CreateOrEditVM
 
 @{
-    ViewData["Title"] = "Создать новость";
+    ViewData["Title"] = "Создать/редактировать новость";
 }
 <form asp-controller="Article" asp-action="Create" method="post">
     <div class="mb-3">
