--- a/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
@@ -10,15 +10,15 @@
     }
 }
 <form asp-controller="Article" asp-action="Index" method="get" id="main-form">
-<ul class="nav nav-pills nav-fill">
-    <li>
-        <partial name="_FilterPartial" model="@Model.FilterData"></partial>
-    </li>
-    <li class="nav-item d-flex">
-        <input type="search" placeholder="Поиск" name="searchString" class="form-control me-2" value="@Model.SearchString"/>
-        <button type="submit" class="btn btn-outline-success">Поиск</button>
-    </li>
-</ul>
+    <ul class="nav nav-pills nav-fill">
+        <li>
+            <partial name="_FilterPartial" model="@Model.FilterData"></partial>
+        </li>
+        <li class="nav-item d-flex">
+            <input type="search" placeholder="Поиск" name="searchString" class="form-control me-2" value="@Model.SearchString"/>
+            <button type="submit" class="btn btn-outline-success">Поиск</button>
+        </li>
+    </ul>
 
 <nav class="m-3">
     <ul class="nav nav-tabs card-header-tabs d-flex justify-content-around">
@@ -37,15 +37,17 @@
     </ul>
 </nav>
 
-<div class="row row-cols-2 row-cols-sm-3 row-cols-xxl-4 g-3 g-lg-4 m-0 m-sm-1 m-md-2 m-xxl-3">
-    @foreach (var article in Model.Articles)
+@if (Model.Articles.Any())
     {
-        <partial name="_PreviewPartial" model="@article"></partial>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-xxl-4 g-3 g-lg-4 m-0 m-sm-1 m-md-2 m-xxl-3">
+            @foreach (var article in Model.Articles)
+            {
+                <partial name="_PreviewPartial" model="@article"></partial>
+            }
+        </div>
+
+        <paginator page-model="@Model.PagingInfo" output-class="pagination justify-content-center mt-3"
+               page-item-class="page-item" page-link-class="page-link" selected-class="active"></paginator>
     }
-</div>
-
-<paginator page-model="@Model.PagingInfo" output-class="pagination justify-content-center mt-3" 
-           page-item-class="page-item" page-link-class="page-link" selected-class="active"></paginator>
-
 </form>
 
