Added user details dtos and models

--- a/by.Reba/by.Reba.Application/Views/Account/NavigationUserPreview.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/NavigationUserPreview.cshtml
@@ -22,7 +22,7 @@ else {
         </a>
 
         <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" asp-controller="Account" asp-action="Details" asp-route-id="@Model.Id">Обзор</a></li>
+            <li><a class="dropdown-item" asp-controller="Account" asp-action="Details">Обзор</a></li>
             <li><a class="dropdown-item" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id">Редактировать</a></li>
             <li class="dropdown-divider"></li>
             <li><a class="dropdown-item" asp-controller="Account" asp-action="SignOut" asp-route-id="@Model.Id">Выйти</a></li>
