--- a/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
@@ -56,7 +56,7 @@
                     </td>
                     <td>
                         <a asp-controller="Article" asp-action="Details" asp-route-id="@article.Id">
-                            <img src="@article.PosterUrl" alt="article" class="img-fluid">
+                            <img src="@article.PosterUrl" alt="article" class="img-fluid col-5">
                         </a>
                     </td>
                     <td>@article.PublicationDate.ToString("f")</td>
