--- a/by.Reba/by.Reba.Application/Views/Article/_PreviewPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_PreviewPartial.cshtml
@@ -4,7 +4,7 @@
 @model ArticlePreviewDTO
 
 <a asp-controller="Article" asp-action="Details" asp-route-id="@Model.Id" class="text-decoration-none text-black">
-    <div class="card">
+    <div class="card h-100">
         <img src="@Model.PosterUrl" alt="article" class="card-img-top">
         <div class="card-body">
             <h4 class="card-title">@Model.Title</h4>
