--- a/by.Reba/by.Reba.Application/Views/Shared/_LayoutHeader.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_LayoutHeader.cshtml
@@ -1,12 +1,11 @@
-﻿<header class="sticky-top">
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+﻿<header class="sticky-top mb-3">
+    <nav class="navbar bg-warning shadow p-3 rounded">
         <div class="container-fluid">
-            <ul class="navbar-nav flex-grow-1">
-                <a class="navbar-brand" asp-controller="Article" asp-action="Index">
-                    <img src="~/favicon.png" alt="Logo" width="70" height="70">
-                    <big>Reba.by</big>
-                </a>
-            </ul>
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="~/favicon.png" alt="Logo" width="70" height="70" class="d-inline-block">
+                <big id="logo" class="p-2 fs-2 text-danger">Reba.by</big>
+            </a>
+
             <ul id="login-nav" class="navbar-nav"></ul>
         </div>
     </nav>
