--- a/by.Reba/by.Reba.Application/wwwroot/css/site.css
+++ b/by.Reba/by.Reba.Application/wwwroot/css/site.css
@@ -1,28 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Federo&display=swap');
+
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
+}
+
+@media (max-width: 575px) {
+    #article-preview {
+        height: 20vw;
+    }
+}
+
+@media (min-width: 576px) {
+    #article-preview,
+    #article-short-summary {
+        height: 50%;
+    }
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+    html {
+        font-size: 16px;
+    }
 }
 
 body {
-  margin-bottom: 60px;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 60px;
+}
+
+#logo {
+    font-family: 'Federo', sans-serif;
+    vertical-align: -5px;
+}
+
+form .row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .card-img-top {
     width: 100%;
-    height: 10vw;
     object-fit: cover;
 }
 
 a {
     text-decoration: none;
+    color: inherit;
 }
