--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -1,32 +1,32 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Админ панель</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-</head>
-<body>
-    <partial name="_LayoutHeader"></partial>
-    <main role="main" class="container-fluid">
-        <div class="row">
-            <partial name="_AdminNavigationPartial"></partial>
-            <div class="col-sm-10 offset-2">
-                @RenderBody()
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>@ViewData["Title"] - Админ панель</title>
+        <link rel="shortcut icon" href="~/favicon.png" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    </head>
+    <body>
+        <partial name="_LayoutHeader"></partial>
+        <main role="main">
+            <div class="d-flex">
+                <partial name="AdminAside"></partial>
+                <div class="flex-grow-1">
+                    @RenderBody()
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <footer class="footer text-muted fixed-bottom bg-light">
-        <div class="container text-center">
-                &copy; @DateTime.Now.Year - Reba.by | сгенерировано @DateTime.Now.ToString("g")
-            <br>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
+        <footer class="border-top footer fixed-bottom bg-secondary">
+            <div class="container text-light text-center">
+                &copy; @DateTime.Now.ToString("MMMM yyyy") - Reba.by
+            </div>
+        </footer>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @await RenderSectionAsync("Scripts", required: false)
+    </body>
 </html>
