--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -16,9 +16,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted fixed-bottom">
-        <div class="container">
-            &copy; 2022 - by.Reba.Application - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="border-top footer fixed-bottom bg-secondary">
+        <div class="container text-light text-center">
+            &copy; @DateTime.Now.ToString("MMMM yyyy") - Reba.by
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
