--- a/by.Reba/by.Reba.Application/Views/Account/Login.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Login.cshtml
@@ -5,31 +5,36 @@
     ViewData["Title"] = "Вход";
 }
 
-<form asp-controller="Account" asp-action="Login" method="post">
-    <div class="row mb-3">
-        <label asp-for="Email" class="col-sm-2 col-form-label">Никнейм</label>
-        <div class="col-sm-10">
-            <input type="text" asp-for="Email" class="form-control">
-        </div>
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="row mb-3">
-        <label asp-for="Password" class="col-sm-2 col-form-label">Пароль</label>
-        <div class="col-sm-10">
-            <input type="password" asp-for="Password" class="form-control">
-        </div>
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
+<div class="row justify-content-center">
+    <div class="col-md-7 col-lg-5">
+        <div class="p-4 p-md-5">
+            <h2 class="mb-4 text-center text-success">Войти</h2>
+            <form asp-controller="Account" asp-action="Login" method="post">
+                <div class="my-3">
+                    <label asp-for="Email" class="form-label text-success">Почта</label>
+                    <input type="text" asp-for="Email" class="form-control">
+                </div>
+                <span asp-validation-for="Email" class="text-danger"></span>
 
-    <button type="submit" class="btn btn-primary">Войти</button>
-</form>
+                <div class="my-3">
+                    <label asp-for="Password" class="form-label text-success">Пароль</label>
+                    <input type="password" asp-for="Password" class="form-control">
+                </div>
+                <span asp-validation-for="Password" class="text-danger"></span>
 
-<div>
-    <a asp-controller="Account" asp-action="Register" class="btn btn-primary">
-        Регистрация
-    </a>
+                <div class="form-group pt-3">
+                    <button type="submit" class="form-control btn btn-success rounded px-3">Войти</button>
+                </div>
+            </form>
+            <p class="text-center mt-3">
+                Нет аккаунта? 
+                <a asp-controller="Account" asp-action="Register" class="text-primary">
+                    Зарегистрируйся
+                </a>
+             </p>
+        </div>
+    </div>
 </div>
-
 
 @section Scripts 
 {
