--- a/by.Reba/by.Reba.Application/Views/Account/Register.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Register.cshtml
@@ -2,41 +2,45 @@
 @model RegisterVM
 
 @{
-    ViewData["Title"] = "Регистрация";
+    ViewData["Title"] = "Зарегистрироваться";
 }
 
-<form asp-controller="Account" asp-action="Register" method="post">
-    <div class="row mb-3">
-        <label asp-for="Nickname" class="col-sm-2 col-form-label">Никнейм</label>
-        <div class="col-sm-10">
-            <input type="text" asp-for="Nickname" class="form-control">
-        </div>
-        <span asp-validation-for="Nickname" class="text-danger"></span>
-    </div>
-    <div class="row mb-3">
-        <label asp-for="Email" class="col-sm-2 col-form-label">Почта</label>
-        <div class="col-sm-10">
-            <input type="email" asp-for="Email" class="form-control">
-        </div>
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="row mb-3">
-        <label asp-for="Password" class="col-sm-2 col-form-label">Пароль</label>
-        <div class="col-sm-10">
-            <input type="password" asp-for="Password" class="form-control">
-        </div>
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div class="row mb-3">
-        <label asp-for="PasswordConfirm" class="col-sm-2 col-form-label">Пароль</label>
-        <div class="col-sm-10">
-            <input type="password" asp-for="PasswordConfirm" class="form-control">
-        </div>
-        <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
-    </div>
+<div class="row justify-content-center">
+    <div class="col-md-7 col-lg-5">
+        <div class="p-4 p-md-5">
+            <h2 class="mb-4 text-center text-success">Войти</h2>
+            <form asp-controller="Account" asp-action="Register" method="post">
+                <div class="my-3">
+                    <label asp-for="Nickname" class="form-label text-success">Никнейм</label>
+                    <input type="text" asp-for="Nickname" class="form-control">
+                </div>
+                <span asp-validation-for="Nickname" class="text-danger"></span>
 
-    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-</form>
+                <div class="my-3">
+                    <label asp-for="Email" class="form-label text-success">Почта</label>
+                    <input type="email" asp-for="Email" class="form-control">                
+                </div>
+                <span asp-validation-for="Email" class="text-danger"></span>
+
+                <div class="my-3">
+                    <label asp-for="Password" class="form-label text-success">Пароль</label>
+                    <input type="password" asp-for="Password" class="form-control">
+                </div>
+                <span asp-validation-for="Password" class="text-danger"></span>
+
+                <div class="my-3">
+                    <label asp-for="PasswordConfirm" class="form-label text-success">Подтверждение пароля</label>
+                    <input type="password" asp-for="PasswordConfirm" class="form-control">
+                </div>
+                <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
+
+                <div class="form-group pt-3">
+                    <button type="submit" class="form-control btn btn-success rounded px-3">Зарегистрироваться</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 @section Scripts 
 {
