--- a/by.Reba/by.Reba.Application/Views/Article/_FilterPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_FilterPartial.cshtml
@@ -1,63 +1,106 @@
 ﻿@using by.Reba.Application.Models.Article
 @model ArticleFilterDataVM
 
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-light text-success">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#filter">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </nav>
-<div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+<div class="offcanvas offcanvas-end bg-light" data-bs-scroll="true" tabindex="-1" id="filter">
+
     <div class="offcanvas-header">
-        <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Фильтры</h2>
+        <h2 class="offcanvas-title text-center text-success">Фильтры</h2>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <div class="offcanvas-body">
-        <h4 class="text-center">Категории:</h4>
-        <ul class="list-group">
-            @foreach (var category in Model.Categories)
-            {
-                <li class="list-group-item">
-                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Categories)" checked="@Model.CurrentFilter.Categories.Contains(category.Id)" value="@category.Id">
-                    <label class="form-check-label ms-3">@category.Title</label>
-                </li>
-            }
-        </ul>
-        <h4 class="text-center mt-2">Источники:</h4>
-        <ul class="list-group">
-        @foreach (var source in Model.Sources)
-        {
-            <li class="list-group-item">
-                <input class="form-check-input" type="checkbox" name="@nameof(Model.Sources)" checked="@Model.CurrentFilter.Sources.Contains(source.Id)" value="@source.Id">
-                <label class="form-check-label ms-3">@source.Name</label>
-            </li>
-        }
-        </ul>
-        <h4 class="text-center mt-2">Позитивность:</h4>
-        <ul class="list-group">
-        @foreach (var rating in Model.PositivityRatings)    
-        {
-            <li class="list-group-item">
-                <input class="form-check-input" type="radio" name="MinPositivityRating" checked="@Model.CurrentFilter.MinPositivityRating.Equals(rating.Id)" value="@rating.Id">
-                <label class="form-check-label ms-3">
-                    @rating.Title
-                </label>
-            </li>
-        }
-        </ul>
 
-        <div class="mt-3">
-            <label class="form-lable col-1 text-center"><h4>C</h4></label>
+    <div class="offcanvas-body">
+        <div class="navbar-expand-sm">
+            <div class="container-fluid">
+                <div class="text-center m-3">
+                    <button class="navbar-toggler btn-success bg-success text-center p-2 fs-6 col-12" type="button" data-bs-toggle="collapse" data-bs-target="#categories">
+                        Категории
+                    </button>
+                </div>
+                <div id="categories" class="collapse show navbar-collapse mt-3">
+                    <div class="d-flex justify-content-center flex-column w-100">
+                        <h5 class="text-success mb-3">Категории:</h5>
+                        <ul class="list-group">
+                            @foreach (var category in Model.Categories)
+                            {
+                                <li class="list-group-item">
+                                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Categories)" checked="@Model.CurrentFilter.Categories.Contains(category.Id)" value="@category.Id">
+                                    <label class="form-check-label ms-3">@category.Title</label>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+            </div>          
+        </div>
+
+        <div class="navbar-expand-sm">
+            <div class="container-fluid">
+                <div class="text-center m-3">
+                    <button class="navbar-toggler btn btn-success bg-success text-center p-2 fs-6 col-12" type="button" data-bs-toggle="collapse" data-bs-target="#rating">
+                        Позитивность
+                    </button>
+                </div>
+                <div id="rating" class="collapse navbar-collapse mt-3">
+                    <div class="d-flex justify-content-center flex-column w-100">
+                        <h5 class="text-success mb-3">Позитивность:</h5>
+                        <ul class="list-group mb-3">
+                            @foreach (var rating in Model.PositivityRatings)
+                            {
+                                <li class="list-group-item">
+                                    <input class="form-check-input" type="radio" name="MinPositivityRating" checked="@Model.CurrentFilter.MinPositivityRating.Equals(rating.Id)" value="@rating.Id">
+                                    <label class="form-check-label ms-3">
+                                        @rating.Title
+                                    </label>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="navbar-expand-sm">
+            <div class="container-fluid">
+                <div class="text-center m-3">
+                    <button class="navbar-toggler btn-success bg-success text-center p-2 fs-6 col-12" type="button" data-bs-toggle="collapse" data-bs-target="#sources">
+                        Источники
+                    </button>
+                </div>
+                <div id="sources" class="collapse navbar-collapse mt-3">
+                    <div class="d-flex justify-content-center flex-column w-100">
+                        <h5 class="text-success mb-3">Источники:</h5>
+                        <ul class="list-group">
+                            @foreach (var source in Model.Sources)
+                            {
+                                <li class="list-group-item">
+                                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Sources)" checked="@Model.CurrentFilter.Sources.Contains(source.Id)" value="@source.Id">
+                                    <label class="form-check-label ms-3">@source.Name</label>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="py-3">
+            <label class="form-lable col-1 text-center text-success fs-5">с</label>
             <input class="col-10 ms-3" type="datetime-local" name="@nameof(Model.CurrentFilter.From)" value="@Model.CurrentFilter.From.ToString("yyyy-MM-ddTHH:mm")" />
         </div>
-        <div class="mt-3">
-            <label class="form-label col-1 text-center"><h4>По</h4></label>
+        <div class="py-3">
+            <label class="form-label col-1 text-center text-success fs-5">по</label>
             <input class="col-10 ms-3" type="datetime-local" name="@nameof(Model.CurrentFilter.To)" value="@Model.CurrentFilter.To.ToString("yyyy-MM-ddTHH:mm")" />
         </div>
         
         <div class="text-center">
-            <button class="btn btn-primary" type="submit">Найти</button>
+            <button class="btn btn-success col-8" type="submit">Найти</button>
         </div>
     </div>
 </div>
