added user avatar

--- a/by.Reba/by.Reba.Application/Views/Account/Login.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
 
                 <div class="form-group pt-3">
-                    <button type="submit" class="form-control btn btn-success rounded px-3">Войти</button>
+                    <button type="submit" class="btn btn-success col-12 px-3">Войти</button>
                 </div>
             </form>
             <p class="text-center mt-3">
