--- a/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
@@ -1,7 +1,48 @@
-﻿@using by.Reba.Application.Models.Account
+﻿@using System.Globalization
+@using by.Reba.Application.Models.Account
 @model UserDetailsVM
 
 @{
     ViewData["Title"] = Model.Nickname;
+    if (Model.IsAdmin)
+    {
+        Layout = "_AdminLayout";
+    }
 }
+
+<div class="d-flex flex-column">
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex flex-row gap-3 align-items-center">
+            <img src="~/@Model.AvatarUrl" alt="avatar" height="100" width="100" class="rounded-circle" />
+            <div class="d-flex flex-column align-items-start">
+                <h2 class="">@Model.Nickname</h2>
+                <h6 class="">@Model.RoleName</h6>
+            </div>
+        </div>
+        <div class="d-flex flex-column align-items-center gap-3">
+            <big class="m-0">Комментарии</big>
+            <small class="m-0">@Model.Comments.Count()</small>
+        </div>
+        <div class="d-flex flex-column align-items-center gap-3">
+            <big class="m-0">Дата регистрации</big>
+            <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
+        </div>
+        <div class="d-flex flex-column align-items-center gap-3">
+            <big class="m-0">Почта</big>
+            <small class="m-0">@Model.Email</small>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row">
+        <div class="d-flex flex-column">
+            <big class="m-0">Предпочитаемый рейтинг позитивности</big>
+            <small class="m-0">@Model.MinPositivityRatingName</small>
+        </div>
+        <div class="d-flex flex-column">
+
+        </div>
+    </div>
+</div>
+
+
 
