--- a/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
@@ -12,7 +12,7 @@
 <form asp-controller="Article" asp-action="Index" method="get" id="main-form">
     <div class="d-flex justify-content-between gap-sm-5">
         <div class="d-flex flex-grow-1 py-3 px-3">
-            <input type="search" placeholder="Поиск" name="searchString" class="form-control me-1 me-sm-3 text-success" value="@Model.SearchString"/>
+            <input type="search" placeholder="Поиск" name="searchString" class="form-control me-1 me-sm-3 border-success" value="@Model.SearchString"/>
             <button type="submit" class="btn btn-success">Поиск</button>
         </div>
 
