--- a/by.Reba/by.Reba.Application/Views/Shared/_EnterPagePartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_EnterPagePartial.cshtml
@@ -1,17 +1,17 @@
 ﻿@model string
 
-<div class="modal fade" id="@Model" aria-labelledby="exampleModalLabel">
+<div class="modal fade text-success" id="@Model" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+        <div class="modal-content bg-lightgrey">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Выбор страницы</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <input type="number" name="page" class="form-control" placeholder="Введите номер страницы"/>
+                <input type="number" name="page" class="form-control bg-lightgrey" placeholder="Введите номер страницы"/>
             </div>
             <div class="modal-footer justify-content-center">
-                <button type="submit" class="btn btn-primary">Перейти</button>
+                <button type="submit" class="btn btn-success">Перейти</button>
             </div>
         </div>
     </div>
