--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,17 +10,13 @@
 </head>
 <body>
     <partial name="_LayoutHeader"></partial>
-    <div class="container">
+    <div class="container p-1 p-sm-3">
         <main role="main">
             @RenderBody()
         </main>
     </div>
+    <partial name="_LayoutFooter"></partial>
 
-    <footer class="border-top footer fixed-bottom bg-secondary">
-        <div class="container text-light text-center">
-            &copy; @DateTime.Now.ToString("MMMM yyyy") - Reba.by
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
