add user details view

--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -10,7 +10,7 @@
     </head>
     <body>
         <partial name="_LayoutHeader"></partial>
-        <main role="main">
+        <main role="main" class="me-3">
             <div class="d-flex gap-2">
                 <partial name="AdminAside"></partial>
                 <div class="flex-grow-1">
