--- a/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
@@ -10,36 +10,96 @@
     }
 }
 
-<div class="d-flex flex-column">
-    <div class="d-flex justify-content-between align-items-center">
-        <div class="d-flex flex-row gap-3 align-items-center">
-            <img src="~/@Model.AvatarUrl" alt="avatar" height="100" width="100" class="rounded-circle" />
-            <div class="d-flex flex-column align-items-start">
-                <h2 class="">@Model.Nickname</h2>
-                <h6 class="">@Model.RoleName</h6>
+<div class="d-flex flex-column gap-5 text-success">
+    <div class="d-flex flex-column px-3">
+        <div class="d-flex flex-row justify-content-between align-items-center">
+            <div class="d-flex flex-row gap-3 align-items-center">
+                <img src="~/@Model.AvatarUrl" alt="avatar" height="100" width="100" class="rounded-circle" />
+                <div class="d-flex flex-column align-items-start">
+                    <h2 class="">@Model.Nickname</h2>
+                    <h6 class="">@Model.RoleName</h6>
+                </div>
+            </div>
+            <div class="d-flex flex-column align-items-center gap-3">
+                <big class="m-0">Комментарии</big>
+                <small class="m-0">@Model.Comments.Count()</small>
+            </div>
+            <div class="d-flex flex-column align-items-center gap-3">
+                <big class="m-0">Дата регистрации</big>
+                <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
+            </div>
+            <div class="d-flex flex-column align-items-center gap-3">
+                <big class="m-0">Почта</big>
+                <small class="m-0">@Model.Email</small>
+            </div>
+        </div>       
+
+        <div class="d-flex flex-row justify-content-end gap-5">
+            <div class="d-flex flex-column">
+                <big class="m-0">Предпочитаемый рейтинг позитивности</big>
+                <small class="m-0">@Model.MinPositivityRatingName</small>
+            </div>
+            <div class="d-flex flex-column">
+                <big class="m-0">Предпочитаемые категории</big>
+                @foreach (var category in Model.Categories)
+                {
+                    <small class="m-0">@category</small>
+                }
             </div>
         </div>
-        <div class="d-flex flex-column align-items-center gap-3">
-            <big class="m-0">Комментарии</big>
-            <small class="m-0">@Model.Comments.Count()</small>
-        </div>
-        <div class="d-flex flex-column align-items-center gap-3">
-            <big class="m-0">Дата регистрации</big>
-            <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
-        </div>
-        <div class="d-flex flex-column align-items-center gap-3">
-            <big class="m-0">Почта</big>
-            <small class="m-0">@Model.Email</small>
-        </div>
+
     </div>
 
-    <div class="d-flex flex-row">
-        <div class="d-flex flex-column">
-            <big class="m-0">Предпочитаемый рейтинг позитивности</big>
-            <small class="m-0">@Model.MinPositivityRatingName</small>
-        </div>
-        <div class="d-flex flex-column">
-
+    <div class="d-flex flex-row gap-3">
+        <div class="d-flex flex-column flex-grow-1">
+            <div class="btn-group d-flex justify-content-center">
+                <button id="btn-activity" type="submit" class="btn btn-success active">Активность</button>
+                <button id="btn-history" type="submit" class="btn btn-success">История</button>
+            </div>
+            <div id="user-activity">
+                <div class="card card body bg-lightgrey m-0 m-sm-2">
+                    @if (Model.Comments.Any())
+                    {
+                        foreach (var comment in Model.Comments)
+                        {
+                            <partial name="_CommentShortSummaryPartial" model="comment"></partial>
+                        }
+                    }
+                    else {
+                        <p>Комментарии отсутствуют</p>
+                    }
+                </div>
+            </div>
+            <div id="user-history" class="d-none">
+                <div class="card card body bg-lightgrey m-0 m-sm-2">
+                    @if (Model.History.Any())
+                    {
+                        <table class="table table-hover align-middle text-center table-bordered">
+                            <thead class="align-middle">
+                                <tr class="bg-secondary text-light">
+                                    <th>Время</th>
+                                    <th>Название</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-success">
+                                @foreach (var article in Model.History.OrderByDescending(h => h.LastVisitTime))
+                                {
+                                    <tr>
+                                        <td>@article.LastVisitTime.ToString("dd MMMM hh:mm", new CultureInfo("ru-RU"))</td>
+                                        <td class="text-start">
+                                            <a asp-controller="Article" asp-action="Details" asp-route-id="@article.ArticleId">@article.ArticleTitle</a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    }
+                    else
+                    {
+                        <p>История отсутствует</p>
+                    }
+                </div>
+            </div>
         </div>
     </div>
 </div>
